feat(swagger): implement api banner

--- a/packages/swagger-ui-v3/index.html
+++ b/packages/swagger-ui-v3/index.html
@@ -15,16 +15,16 @@
     filter: true,
     presets: [],
     plugins: [
-    //   'SidebarPlugin',
-    //   'TopbarPlugin',
-    //   'AuthorizeBtnPlugin',
-    //   'StandaloneLayoutPlugin',
-    //   'OperationsPlugin',
-    //   'OAuth2Plugin',
-    //   'HighlightPlugin',
-    //   'FooterPlugin',
-    //   'DownloadUrl'
-    ],
+      'TopbarPlugin',
+      'StandaloneLayoutPlugin'
+      //   'SidebarPlugin',
+      //   'AuthorizeBtnPlugin',
+      //   'OperationsPlugin',
+      //   'OAuth2Plugin',
+      //   'HighlightPlugin',
+      //   'FooterPlugin',
+      //   'DownloadUrl'
+    ]
     // tagsSwitches: [
     //   {label: 'Deprecated', value: 'deprecated'},
     //   {label: 'Admin', value: 'admin'}
