fix(swagger-ui-plugins): fix jwt token on auth popup

--- a/packages/swagger-ui-standalone-v3/index.html
+++ b/packages/swagger-ui-standalone-v3/index.html
@@ -9,125 +9,23 @@
 <body>
 <script>
   window.SwaggerUIConfiguration = {
-    brandName: "ClubMed",
-    appName: "Api",
-    url: "/doc/v3/swagger.json",
+    brandName: 'ClubMed',
+    appName: 'Dataviz',
+    url: '/doc/swagger.json',
     filter: true,
-    presets: [],
-    routes: [
-      {}
-    ],
+    deepLinking: true,
+    useUnsafeMarkdown: true,
+    contact: 'mailto:lvisdigiapi@clubmed.com',
     plugins: [
-      "TopbarPlugin",
-      "StandaloneLayoutPlugin"
-      //   'SidebarPlugin',
-      //   'AuthorizeBtnPlugin',
-      //   'OperationsPlugin',
-      //   'OAuth2Plugin',
-      //   'HighlightPlugin',
-      //   'FooterPlugin',
-      //   'DownloadUrl'
+      'TopbarPlugin',
+      'StandaloneLayoutPlugin'
     ],
-    // tagsSwitches: [
-    //   {label: 'Deprecated', value: 'deprecated'},
-    //   {label: 'Admin', value: 'admin'}
-    // ],
-    // layout: 'StandaloneLayout',
-    // deepLinking: true,
-    // useUnsafeMarkdown: true,
-    contact: "mailto:lvisdigiapi@clubmed.com",
-    footer: {
-      // contact: {
-      //   phoneCost: 'Toll free number',
-      //   phoneNumber: '+1 (88) 932-2582'
-      // },
-      columns: [
-        {
-          label: "Club Med Universe",
-          links: [
-            {
-              label: "Club Med",
-              href: "https://clubmed.com"
-            },
-            {
-              label: "Club Med Suppliers",
-              href: "https://www.google.com"
-            },
-            {
-              label: "Club Med Loyalty Programme",
-              href: "https://www.google.com"
-            },
-            {
-              label: "Responsible Tourism",
-              href: "https://www.google.com"
-            },
-            {
-              label: "My Club Med App",
-              href: "https://www.google.com"
-            }
-          ]
-        }
-      ],
-      socialNetworks: [
-        {
-          label: "Instagram",
-          href: "https://www.instagram.com/clubmed",
-          icon: "Instagram"
-        },
-        {
-          label: "Facebook",
-          href: "https://www.facebook.com/ClubMedFrance",
-          icon: "Facebook"
-        },
-        {
-          label: "Twitter",
-          href: "https://twitter.com/ClubMedfr",
-          icon: "Twitter"
-        },
-        {
-          label: "Youtube",
-          href: "https://www.youtube.com/clubmed",
-          icon: "YouTube"
-        },
-        {
-          label: "Pinterest",
-          href: "https://fr.pinterest.com/clubmed/",
-          icon: "Pinterest"
-        }
-      ],
-      corporateLinks: [
-        {
-          label: "Club Med Corporate",
-          description: "Visit the Corporate Club Med site, to learn more about the Group, the ownership and sustainable development policy.",
-          href: "https://corporate.clubmed/?lang=en"
-        },
-        {
-          label: "Club Med Jobs",
-          description: "Looking to participate in the ClubMed adventure? Learn more on the international recruitment page and stay ahead of the latest Club Med HR news.",
-          href: "https://www.clubmedjobs.com/en-gb/resort"
-        }
-      ],
-      legalLinks: [
-        {
-          label: "Legal Information",
-          href: "https://www.clubmed.fr/l/informations-legales"
-        }
-      ],
-      newsletter: {
-        label: "Sign up to our newsletter",
-        cta: {
-          label: "Sign up",
-          href: "/sign-up"
-        }
-      }
-    },
     oauth: {
       usePkceWithAuthorizationCodeGrant: true,
       allowedScopes: ["openid", "email", "profile", "api_admin"],
       defaultSelectedScopes: ["openid", "email", "profile"]
     },
-    persistAuthorization: true,
-    oauth2RedirectUrl: window.location.origin + "/doc/v3/oauth2-redirect.html"
+    persistAuthorization: true
   };
 </script>
 
