fix: enhance search functionality and update deep linking behavior

--- a/packages/swagger-ui-standalone-v3/index.html
+++ b/packages/swagger-ui-standalone-v3/index.html
@@ -13,7 +13,7 @@
     appName: 'Dataviz',
     url: '/doc/swagger.json',
     filter: true,
-    deepLinking: true,
+    deepLinking: false,
     useUnsafeMarkdown: true,
     contact: 'mailto:lvisdigiapi@clubmed.com',
     plugins: [
